add delete method

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGO_URI =mongodb+srv://fabio17:(70767393)ff17@cluster0.d7d9k.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://fabio17:(70767393)ff17@cluster0.d7d9k.mongodb.net/?retryWrites=true&w=majority
 MONGO_DBNAME = AOT-API
